# svr3-osdi24-client

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/attest/: cds2.rs  cert_chain.rs  constants.rs  dcap.rs  enclave.rs  hsm_enclave.rs  ias.rs  lib.rs  nitro.rs  proto.rs  sgx_session.rs  svr2.rs  tpm2snp.rs
src/attest/dcap/: ecdsa.rs  endorsements.rs  evidence.rs  fakes.rs  revocation_list.rs  sgx_quote.rs  sgx_report_body.rs  sgx_x509.rs
src/attest/tpm2snp/: snp.rs  tpm2.rs
src/net/: auth.rs  cdsi.rs  chat.rs  enclave.rs  env.rs  infra.rs  svr.rs  svr3.rs  utils.rs
src/net/chat/: chat_reconnect.rs  error.rs  ws.rs
src/net/infra/: certs.rs  connection_manager.rs  dns.rs  errors.rs  reconnect.rs  tcp_ssl.rs  ws.rs
src/net/infra/ws/: error.rs
src/svr3/: errors.rs  lib.rs  mod.rs  ppss.rs
src/svr3/oprf/: ciphersuite.rs  client.rs
