[package]
name = "svr3-osdi24-client"
version = "0.1.0"
edition = "2021"
authors = ["Signal Messenger LLC"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#attest
boring = { git = "https://github.com/signalapp/boring", tag = "signal-v4.6.0", default-features = false }

asn1 = "0.16.1"
base64 = "0.21"
bitflags = "2.3.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
displaydoc = "0.2"
hex = { version = "0.4", features = ["serde"] }
hex-literal = "0.4.1"
hmac = "0.12"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
prost = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sha2 = "0.10"
snow = { version = "0.9.5", default-features = false }
static_assertions = "1.1"
strum = { version = "0.26", features = ["derive"] }
subtle = "2.5"
thiserror = "1.0.57"
uuid = "1.1.2"
x25519-dalek = "2.0.0"

# core
num_enum = "0.6.1" 

# net
async-trait = "0.1.41"
bincode = "1.0"
bytes = "1.4.0"
const-str = { version = "0.5.6", features = ["std"] }
derive-where = "1.2.7"
futures-util = "0.3.7"
hkdf = "0.12.3"
http = "1.0.0"
http-body-util = "0.1.1"
itertools = "0.12.0"
nonzero_ext = "0.3.0"
pin-project-lite = "0.2.4"
rand = "0.8.0"
rustls = { version = "0.23.4", default-features = false, features = ["ring", "std", "tls12"] }
rustls-platform-verifier = "0.3.1"
tokio = { version = "1", features = ["rt", "time", "macros", "test-util", "rt-multi-thread"] }
tokio-boring = { git = "https://github.com/signalapp/boring", tag = "signal-v4.6.0" }
tokio-tungstenite = { version = "0.21.0" }
tokio-util = "0.7.9"
tungstenite = { version = "0.21.0" }
url = "2.4.1"

# svr3
curve25519-dalek = { version = "4.0", features = ["rand_core"] }
strum_macros = "0.26"
rustls-native-certs = "0.6.3"
clap = { version = "4.4.11", features = ["derive"] }


tokio-stream = "0.1.14"
futures = "0.3.30"


[dev-dependencies]
assert_matches = "1.5"
snow = { version = "0.9.5", features = ["default-resolver"] }
test-case = "3.3"


clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
proptest = "1.4.0"
proptest-state-machine = "0.1.0"
rcgen = "0.13.0"
tokio = { version = "1", features = ["test-util", "io-std", "rt-multi-thread"] }
tokio-stream = "0.1.14"
url = "2.4.1"
warp = { version = "0.3.6", features = ["tls"] }
tls-parser = "0.11.0"

bytemuck = "1.13.0"
criterion = "0.5"
hex = "0.4"
hex-literal = "0.4.1"
nonzero_ext = "0.3.0"

[build-dependencies]
prost-build = "0.12"
